--- a/dwm.1
+++ b/dwm.1
@@ -19,14 +19,14 @@ layout applied.
 Windows are grouped by tags. Each window can be tagged with one or multiple
 tags. Selecting certain tags displays all windows with these tags.
 .P
-dwm contains a small status bar which displays all available tags, the layout,
-the title of the focused window, and the text read from standard input. A
-floating window is indicated with an empty square and a maximised
-floating window is indicated with a filled square before the windows
-title.  The selected tags are indicated with a different color. The tags of
-the focused window are indicated with a filled square in the top left
-corner.  The tags which are applied to one or more windows are indicated
-with an empty square in the top left corner.
+Each screen contains a small status bar which displays all available tags, the
+layout, the title of the focused window, and the text read from the root window
+name property, if the screen is focused. A floating window is indicated with an
+empty square and a maximised floating window is indicated with a filled square
+before the windows title.  The selected tags are indicated with a different
+color. The tags of the focused window are indicated with a filled square in the
+top left corner.  The tags which are applied to one or more windows are
+indicated with an empty square in the top left corner.
 .P
 dwm draws a small border around windows to indicate the focus state.
 .SH OPTIONS
@@ -36,8 +36,10 @@ prints version information to standard output, then exits.
 .SH USAGE
 .SS Status bar
 .TP
-.B Standard input
-is read and displayed in the status text area.
+.B X root window name
+is read and displayed in the status text area. It can be set with the
+.BR xsetroot (1)
+command.
 .TP
 .B Button1
 click on a tag label to display all windows with that tag, click on the layout
@@ -55,7 +57,19 @@ click on a tag label adds/removes that tag to/from the focused window.
 .TP
 .B Mod1\-Shift\-Return
 Start
-.BR xterm.
+.BR uxterm (1).
+.TP
+.B Mod1\-,
+Focus previous screen, if any.
+.TP
+.B Mod1\-.
+Focus next screen, if any.
+.TP
+.B Mod1\-Shift\-,
+Send focused window to previous screen, if any.
+.TP
+.B Mod1\-Shift\-.
+Send focused window to next screen, if any.
 .TP
 .B Mod1\-b
 Toggles bar on and off.
@@ -97,30 +111,22 @@ Toggle focused window between tiled and floating state.
 Toggles to the previously selected tags.
 .TP
 .B Mod1\-Shift\-[1..n]
-Apply
-.RB nth
-tag to focused window.
+Apply nth tag to focused window.
 .TP
 .B Mod1\-Shift\-0
 Apply all tags to focused window.
 .TP
 .B Mod1\-Control\-Shift\-[1..n]
-Add/remove
-.B nth
-tag to/from focused window.
+Add/remove nth tag to/from focused window.
 .TP
 .B Mod1\-[1..n]
-View all windows with
-.BR nth
-tag.
+View all windows with nth tag.
 .TP
 .B Mod1\-0
 View all windows with any tag.
 .TP
 .B Mod1\-Control\-[1..n]
-Add/remove all windows with
-.BR nth
-tag to/from the view.
+Add/remove all windows with nth tag to/from the view.
 .TP
 .B Mod1\-Shift\-q
 Quit dwm.
@@ -140,19 +146,19 @@ code. This keeps it fast, secure and simple.
 .SH SEE ALSO
 .BR dmenu (1)
 .SH BUGS
-The status bar may display
-.BR "EOF"
-when dwm has been started by an X session manager like
-.BR xdm (1),
-because those close standard output before executing dwm.
-.P
 Java applications which use the XToolkit/XAWT backend may draw grey windows
 only. The XToolkit/XAWT backend breaks ICCCM-compliance in recent JDK 1.5 and early
-JDK 1.6 versions, because it assumes a reparenting window manager. As a workaround
-you can use JDK 1.4 (which doesn't contain the XToolkit/XAWT backend) or you
-can set the following environment variable (to use the older Motif
-backend instead):
-.BR AWT_TOOLKIT=MToolkit .
+JDK 1.6 versions, because it assumes a reparenting window manager. Possible workarounds
+are using JDK 1.4 (which doesn't contain the XToolkit/XAWT backend) or setting the
+environment variable
+.BR AWT_TOOLKIT=MToolkit
+(to use the older Motif backend instead) or running
+.B xprop -root -f _NET_WM_NAME 32a -set _NET_WM_NAME LG3D
+or
+.B wmname LG3D
+(to pretend that a non-reparenting window manager is running that the
+XToolkit/XAWT backend can recognize) or when using OpenJDK setting the environment variable
+.BR _JAVA_AWT_WM_NONREPARENTING=1 .
 .P
 GTK 2.10.9+ versions contain a broken
 .BR Save\-As
